--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -23,8 +23,8 @@
 }
 
 .product-item img {
-    width: 200px;
-    height: 300px;
+    width: 150px;
+    height: 150px;
     object-fit: contain;
 
 }
@@ -33,7 +33,7 @@
 .product-details {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid#ddd;
-    padding: 15px;
+    // padding: 50px;
 }
 
 .product-item,
