--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="col-sm-6">
         <div class="deatils">
-            <h1>{{productData.name}}</h1>
+            <h1>{{productData.title}}</h1>
             <h3>Price:{{productData.price}}</h3>
             <div>
                 <div>
