--- a/src/app/saller-update-product/saller-update-product.component.html
+++ b/src/app/saller-update-product/saller-update-product.component.html
@@ -2,15 +2,20 @@
     <h1>Update Product</h1>
     <p class="p-added">{{updateproductMessage}}</p>
     <form #addproduct="ngForm" (ngSubmit)="submit(addproduct.value)" class="common-form">
-        <input  class="form-input" name="name" ngModel="{{productData?.name}}" type="text" placeholder="Enter product name">
-        <input  class="form-input" name="price" ngModel="{{productData?.price}}" type="text" placeholder="Enter product price">
-        <input  class="form-input" name="color" ngModel="{{productData?.color}}" type="text" placeholder="Enter product color">
-        <input  class="form-input" name="category" ngModel="{{productData?.category}}" type="text" placeholder="Enter product Category">
-        <textarea  class="form-input" name="description" ngModel="{{productData?.description}}" placeholder="Enter product Discription" ></textarea>
-        <input  class="form-input" name="image" ngModel="{{productData?.image}}" type="text" placeholder="Enter product image URL">
-        <button  class="form-button">Update Product</button>
-        
-    </form>
-    
-</div>
+        <input class="form-input" name="name" ngModel="{{productData?.title}}" type="text"
+            placeholder="Enter product name">
+        <input class="form-input" name="price" ngModel="{{productData?.price}}" type="text"
+            placeholder="Enter product price">
+        <input class="form-input" name="color" ngModel="{{productData?.color}}" type="text"
+            placeholder="Enter product color">
+        <input class="form-input" name="category" ngModel="{{productData?.category}}" type="text"
+            placeholder="Enter product Category">
+        <textarea class="form-input" name="description" ngModel="{{productData?.description}}"
+            placeholder="Enter product Discription"></textarea>
+        <input class="form-input" name="image" ngModel="{{productData?.image}}" type="text"
+            placeholder="Enter product image URL">
+        <button class="form-button">Update Product</button>
 
+    </form>
+
+</div>
