--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@ body {
     margin-right: 5%;
 }
 
+
+
 .common-form {
     text-align: center;
     display: flex;
@@ -38,6 +40,7 @@ body {
 
 .p-added {
     color: green;
+    text-align: center;
 }
 
 .add-product {
