--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,11 +1,13 @@
 .nav {
     display: flex;
     justify-content: space-between;
+    margin-top: 15px;
+
 }
 
 .nav h1 {
     color: blueviolet;
-    margin: 0;
+    // margin: 0;
     font-size: 40px;
 }
 
@@ -64,7 +66,7 @@ h1 a {
     z-index: 10;
     background-color: #ddd;
     width: 300px;
-    top: 40px;
+    top: 55px;
     border: 1px solid #ddd;
 
 }
