--- a/src/app/search-component/search-component.component.html
+++ b/src/app/search-component/search-component.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-sm-8 details">
         <a routerLink="/details/{{item.id}}">
-            <h6>{{item.name}}</h6>
+            <h6>{{item.title}}</h6>
         </a>
         <p><b>Price:{{item.price}}</b></p>
         <p><span>Color:{{item.color}}</span><span>Categoty:{{item.category}}</span></p>
