--- a/src/app/seller-home/seller-home.component.html
+++ b/src/app/seller-home/seller-home.component.html
@@ -18,16 +18,16 @@
         <tbody>
             <tr *ngFor="let item of productList">
                 <td><img src="{{item.image}}" /></td>
-                <td>{{item.name}}</td>
+                <td>{{item.title}}</td>
                 <td>{{item.price}}</td>
                 <td>{{item.color}}</td>
                 <td>{{item.category}}</td>
                 <td>{{item.description}}</td>
                 <td>
                     <fa-icon (click)="deleteProduct(item.id)" [icon]="icon"></fa-icon>
-                    
+
                     <fa-icon class="adjust-update" routerLink="/seller-update/{{item.id}}" [icon]="editIcon"></fa-icon>
-                
+
                 </td>
 
             </tr>
